# RV32EM-simulator

./: CMakeLists.txt  main.c
simulateur/: CMakeLists.txt  RV32EM.h  main.c
simulateur/src/: decoder.c  decoder.h  execute.c  execute.h  executer.c  executer.h  interface.c  interface.h  manager.c  manager.h  memory.c  memory.h  string_decode.c  string_decode.h
simulateur/src/execute/: execute_B.c  execute_B.h  execute_I.c  execute_I.h  execute_J.c  execute_J.h  execute_R.c  execute_R.h  execute_S.c  execute_S.h  execute_U.c  execute_U.h
simulateur/src/executer/: executer_B.c  executer_I.c  executer_I.h  executer_J.c  executer_J.h  executer_R.c  executer_R.h  executer_S.c  executer_U.c  executer_U.h
src/: CMakeLists.txt  RV32EM.h  decoder.c  executer.c  interface.c  main.c  manager.c  manager.h  memory.h
test/: CMakeLists.txt  decoder_test.c  decoder_test.h  execute_test.c  execute_test.h  executer_test.c  executer_test.h  main_test.c  main_test.h  manager_test.c  manager_test.h  memory_test.c  memory_test.h  riscv_test.txt
test/execute_test/: execute_B_test.c  execute_B_test.h  execute_I_test.c  execute_I_test.h  execute_J_test.c  execute_J_test.h  execute_R_test.c  execute_R_test.h  execute_S_test.c  execute_S_test.h  execute_U_test.c  execute_U_test.h
